# Cpp-2025-grupinis

./: CMakeLists.txt  Darbo_laikas.md  README.md  class_diagram.md  class_diagram.xml
TO-DO-APP/: CMakeLists.txt  mainwindow.ui
include/: Task.h
src/: TaskManager.cpp
src/BACKEND/: TaskManager.h  main.cpp
src/FRONTEND/GUI/To-do_app/: CMakeLists.txt
src/FRONTEND/to-do-app/: CMakeLists.txt  addtaskdialog.cpp  addtaskdialog.h  addtaskdialog.ui  deleteconfirmdialog.cpp  deleteconfirmdialog.h  deleteconfirmdialog.ui  edittaskdialog.cpp  edittaskdialog.h  edittaskdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_TaskManager.cpp
